styles/materials/Translation.module.css
.container {
	width: 350px;
	z-index: 1;
	position: absolute;
	background-color: var(--white);
	font-size: 15px;
	box-shadow: 1px 1px 2px #999;
	border-radius: 3px;
}

.registerContainer {
	padding: 1rem;
	font-weight: 600;
	text-align: center;
	color: var(--secondaryTextColor);
}

.inf {
	background-color: var(--navColor);
	color: var(--white);
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
	font-weight: 500;
	padding: 0.25rem;
	text-align: center;
}

.translatedWord {
	font-size: 0.9rem;
	cursor: pointer;
	padding: 0.25rem 0.5rem;
	font-weight: 600;
	color: var(--secondaryTextColor);
}

.translatedWord:hover {
	background-color: #ccc;
	color: #000;
}

.errMsg {
	font-size: 0.9rem;
	padding: 0.25rem 0.5rem;
	font-weight: 600;
	color: #dc3545;
	text-align: center;
}

.input {
	padding-left: 0.5rem;
	width: 100%;
	border: none;
	box-shadow: inset 1px 1px 2px 1px #ccc;
	height: 40px;
}

.input:focus {
	outline: none;
}

.btn {
	width: 100%;
	border: none;
	background-color: var(--navColor);
	color: var(--white);
	padding: 0.75rem 0;
	cursor: pointer;
	border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
}

